tests/errors/stri2int-err.src
.IPPcode18
defvar GF@fail
STRI2INT GF@fail string@something int@-10
write GF@fail
